# tkdraw

./: COPYRIGHT  Makefile  TODO.txt  setup.cfg
scripts/: fix_commit_author.sh
tkdraw/: __init__.py  canvas.py  coords.py  document.py  mcu_drawer.py  tk_elems.py  tkdraw.py  workspace.py
tkdraw/elems/: __init__.py  elem.py  line_elem.py  text_elem.py
tkdraw/geom/: __init__.py  line.py  line_segment.py  rect.py  vec.py
tkdraw/geom/tests/: test_rect.py  test_vec.py
tkdraw/icons/: __init__.py  arrow.py
tkdraw/inspectors/: __init__.py  coordinates.py  text_entry.py
tkdraw/tk/: elems.py
tkdraw/tools/: __init__.py  line_tool.py  nearest_tool.py  null_tool.py  selection_tool.py  text_tool.py  tool.py
