[metadata]
name = tkdraw
version = 0.1.0
author = Terry Greeniaus
author_email = terrygreeniaus@gmail.com
description = tkinter-based drawing tool.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = stm32 modm-devices pin pinout
url = https://github.com/tgree/tkdraw
license = License :: OSI Approved :: MIT License
classifiers =
    Operating System :: POSIX
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.6
packages =
    tkdraw
    tkdraw.tools

[options.entry_points]
console_scripts =
    tkdraw = tkdraw.tkdraw:_main
